build: add database namespace

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "ActiveRecord\\": "src/ActiveRecord/"
+            "ActiveRecord\\": "src/ActiveRecord/",
+            "Database\\": "src/Database"
         }
     }
 }
